--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -162,7 +162,7 @@ main {
 }
 
 .carousel-img3 {
-  background-image: url("https://scontent.feoh3-1.fna.fbcdn.net/v/t39.30808-6/241505427_6153454548057762_7182432164904885535_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=3a1ebe&_nc_ohc=KPqIXfkjk6sQ7kNvgEn9bpb&_nc_zt=23&_nc_ht=scontent.feoh3-1.fna&_nc_gid=A6cVQZNfEF1_iaSp_MtXfcJ&oh=00_AYCldAbUy517_YwFlIJQhefSc8NRLo7_0tFXaNP-LYe9Bw&oe=674682F5");
+  background-image: url("../../public/img/banner-dondepaco.webp");
   background-size: cover;
   background-position: top;
   height: 400px;
@@ -170,7 +170,7 @@ main {
 }
 
 .carousel-img1 {
-  background-image: url("https://scontent.feoh3-1.fna.fbcdn.net/v/t39.30808-6/348283431_934511700988620_225799338627609589_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=Fn5Fe4jnoIUQ7kNvgFP7Uy0&_nc_zt=23&_nc_ht=scontent.feoh3-1.fna&_nc_gid=A2YEhlkK1wo2aNHa6SvfLrG&oh=00_AYD9YdKMrIBvXH1FOzTQwUjKZP_oWQfL-49d3uUCjibTSQ&oe=67469146");
+  background-image: url("../../public/img/plates-dondepaco.webp");
   background-size: cover;
   background-position: center;
   height:400px;
