Refactor assets and footer content

--- a/src/views/explora.html
+++ b/src/views/explora.html
@@ -34,7 +34,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="shortcut icon" href="../../public/favicon.ico"
       type="image/x-icon">
-    <title>DondePaco | Medellín</title>
+    <title>DondePaco · Medellín</title>
   </head>
 
   <body>
@@ -130,11 +130,13 @@
       <div class="footer-content">
         <img src="../../public/img/logo-dondepaco.webp" alt="Dondepaco"
           class="logo">
-        <p>© DondePaco 2024. Todos los derechos reservados.</p>
+        <p>© DondePaco <span id="year"></span>. Todos los derechos
+          reservados.</p>
         <div class="social-links">
           <a rel="noopener" href="https://www.instagram.com/dondepaco16/?hl=es"
             target="_blank"><i class="bi bi-instagram"></i></a>
-          <a rel="noopener" href="https://www.facebook.com/dondepacocr" target="_blank"><i
+          <a rel="noopener" href="https://www.facebook.com/dondepacocr"
+            target="_blank"><i
               class="bi bi-facebook"></i></a>
           <a rel="noopener" href="https://wa.me/573108476762/?text=DondePaco"
             target="_blank"><i class="bi bi-whatsapp"></i></a>
@@ -145,14 +147,14 @@
     <script type="module" src="../controllers/explora.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-        <script
-            src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
   </body>
 
 </html>
