--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -153,27 +153,27 @@ main {
   margin-bottom: 3rem;
 }
 
-.carousel-img2 {
-  background-image: url("https://images.rappi.com/restaurants_background/2093104191-1612017265602.jpg");
+.carousel-img1 {
+  background-image: url("../../public/img/img-special-burgers-dondepaco.webp");
   background-size: cover;
   background-position: top;
-  height: 400px;
+  height:450px;
+  border-radius: 8px;
+}
+
+.carousel-img2 {
+  background-image: url("../../public/img/img-burger-2.webp");
+  background-size: cover;
+  background-position: top;
+  height: 450px;
   border-radius: 8px;
 }
 
 .carousel-img3 {
-  background-image: url("../../public/img/banner-dondepaco.webp");
+  background-image: url("../../public/img/img-burger.webp");
   background-size: cover;
   background-position: top;
-  height: 400px;
-  border-radius: 8px;
-}
-
-.carousel-img1 {
-  background-image: url("../../public/img/img-special-burgers-dondepaco.webp");
-  background-size: cover;
-  background-position: center;
-  height:400px;
+  height: 450px;
   border-radius: 8px;
 }
 
@@ -184,8 +184,10 @@ main {
 }
 
 .announcement-container {
-  background-color: #B71C1C;
-  height: 100px;
+  background-image: url("../../public/img/banner-dondepaco.webp");
+  background-size: cover;
+  background-position: center;
+  height: 20vw;
   border-radius: 8px;
 }
 
@@ -217,7 +219,7 @@ main {
 }
 
 .about-img3 {
-  background-image: url("../../public/img/img-burger.webp");
+  background-image: url("../../public/img/img-people-dondepaco.webp");
   background-size: cover;
   background-position: center;
   height: 150px;
