--- a/src/views/product.html
+++ b/src/views/product.html
@@ -34,7 +34,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
         <link rel="shortcut icon" href="../../public/favicon.ico"
             type="image/x-icon">
-        <title>DondePaco | Medellín</title>
+        <title>DondePaco · Medellín</title>
     </head>
 
     <body>
@@ -93,13 +93,17 @@
             <div class="footer-content">
                 <img src="../../public/img/logo-dondepaco.webp" alt="Dondepaco"
                     class="logo">
-                <p>© DondePaco 2024. Todos los derechos reservados.</p>
+                <p>© DondePaco <span id="year"></span>. Todos los derechos
+                    reservados.</p>
                 <div class="social-links">
-                    <a rel="noopener" href="https://www.instagram.com/dondepaco16/?hl=es"
+                    <a rel="noopener"
+                        href="https://www.instagram.com/dondepaco16/?hl=es"
                         target="_blank"><i class="bi bi-instagram"></i></a>
-                    <a rel="noopener" href="https://www.facebook.com/dondepacocr"
+                    <a rel="noopener"
+                        href="https://www.facebook.com/dondepacocr"
                         target="_blank"><i class="bi bi-facebook"></i></a>
-                    <a rel="noopener" href="https://wa.me/573108476762/?text=DondePaco"
+                    <a rel="noopener"
+                        href="https://wa.me/573108476762/?text=DondePaco"
                         target="_blank"><i class="bi bi-whatsapp"></i></a>
                 </div>
             </div>
