--- a/src/views/explora.html
+++ b/src/views/explora.html
@@ -7,13 +7,13 @@
     <meta name="description"
       content="Descubre la auténtica comida callejera de Medellín en DondePaco. Hamburguesas, papas y bebidas con sabor urbano en el corazón del Barrio Buenos Aires. ¡Vive la experiencia gastronómica que combina tradición y cultura local!" />
     <meta name="keywords"
-      content="DondePaco, David Francisco Blandon Mena, Juan Pablo Rondón, Julián Rondón, hamburguesas, comida rápida, gastronomía urbana, Medellín, Barrio Buenos Aires, comida callejera, experiencia culinaria, cultura local, restaurante, eventos, artistas locales, sabores auténticos">
+      content="DondePaco, David Francisco Blandón Mena, Juan Pablo Rondón, Julián Rondón, hamburguesas, comida rápida, gastronomía urbana, Medellín, Barrio Buenos Aires, comida callejera, experiencia culinaria, cultura local, restaurante, eventos, artistas locales, sabores auténticos">
     <meta name="sitedomain" content="https://dondepaco.vercel.app/" />
     <meta name="organization" content="DondePaco" />
     <meta name="author"
-      content="David Francisco Blandon Mena, Juan Pablo Rondón, Julián Rondón" />
+      content="David Francisco Blandón Mena, Juan Pablo Rondón, Julián Rondón" />
     <meta name="designer"
-      content="David Francisco Blandon Mena, DondePaco" />
+      content="David Francisco Blandón Mena, DondePaco" />
     <meta name="copyright"
       content="© 2024 DondePaco. Todos los derechos reservados">
     <meta name="robots" content="index,follow" />
@@ -32,7 +32,7 @@
       rel="stylesheet" />
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <link rel="shortcut icon" href="../../public/favicon.ico"
+    <link rel="shortcut icon" href="https://dondepaco.vercel.app/favicon.ico"
       type="image/x-icon">
     <title>DondePaco · Medellín</title>
   </head>
